components/combobox/src/styles/snowflake/style.scss
:host([layout*='snowflake'][shape*='snowflake']) {
  [auro-input] { // CAN I MOVE THESE INTO DROPDOWN? DROPDOWN SHOULD BE SMART ENOUGH TO HIDE THE HELP TEXT OF ANY INPUT INSIDE IT
    width: 100%;

    &::part(inputHelpText) {
      display: none;
    }
  }
}

